--- a/news.html
+++ b/news.html
@@ -22,7 +22,7 @@
         <br /><br />
         <main>
             <words>
-            Acording to the site <site href="https://www.accenture.com/us-en/new-applied-now">www.accenture.com</site> each country could have huge economic gains from 
+            Acording to the site <a href="https://www.accenture.com/us-en/new-applied-now">www.accenture.com</a> each country could have huge economic gains from 
             the use of AIs.
             <br/>
             These would be using AIs to help not only with scientifc means but also with normal peoples' ability to 
